Date	Added
01/05
        * Added a simplified version of Qamera's OnConnect: OnDisconnect: OnDeath: 
          NPC events mod, (All credits go to him.) except adapted based on eA's current
          PCLoginEvent. (by davidsiaw) [celest]
          - Currently only 4 events have been added: PCDieEvent, PCKillEvent, 
            PCLogoutEvent and PCLoginEvent
          - For notes and usage example check /npc/sample/PCLoginEvent.txt (by
            davidsiaw)
          - To enable them for a player in a script, do
            "set <name of event>, <0 or 1>;"
            (yes it's saved in a permanent character variable and auto read every time)
          - Simply put, if any of them is set to 1 the appropiate event will activate
          p.s - Scripters who are already using PcLoginEvent, you'll need to add a
                "set PCLoginEvent, 1;" now, sorry for the trouble.

        * Optimised PCLoginEvent activation a bit [celest]
        * Set 'droprate0item''s default to 'yes' so that items with 0 rate will never
          drop [celest]
        * Look at item type other than item ID as well to check whether it is a card
          in card-related script commands - better support for custom items [celest]
        * Reset all skill variables if the skill fails so certain skills can't be
          abused (such as Warp, thanks to Alex14 for pointing it out) [celest]
        * Added /mapflag/noreturn.txt for disabling butterfly wings (not fly wings)
          [celest]
        * Fixed skill_require_db reading somehow getting corrupted if weapons usable
          for the skill is more than 20, thus causing the skills to fail everytime 
          [celest]
        * Fixed @killmonster crashing the server with summoned monsters, thanks to 
          Alex14 [celest]
        * Added double_connection_system to battle_athena (not completed yet) [celest]

01/04
	* Fixed GM Command Logging (Not sure why TXT logging still isn't working properly :( ) [Codemaster] [SVN 907]